create: connect normalize

--- a/sass/style.sass
+++ b/sass/style.sass
@@ -1,5 +1,8 @@
+// переменные
 @import 'variables'
-
+// общие настройки
 @import 'settings'
-
+// подключение normalize
+@import 'normalize'
+// настрйоки блоков
 @import 'blocks/header'
