--- a/sass/_settings.sass
+++ b/sass/_settings.sass
@@ -2,3 +2,8 @@
   box-sizing: border-box
 body
   font-family: 'Muli' , sans-serif  
+  color: $text-color
+
+.container
+  max-width: 1100px
+  margin: auto
