--- a/css/style.css
+++ b/css/style.css
@@ -335,6 +335,26 @@ template {
   margin: auto;
   margin-left: 108px;
 }
+.navbar-bottom {
+  background-color: #0A223D;
+}
+.navbar-menu {
+  margin: 0;
+  padding: 31px 0;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  color: #fff;
+}
+.navbar-menu__link {
+  color: inherit;
+  text-decoration: none;
+  text-transform: uppercase;
+}
+
+.logo {
+  width: 177px;
+}
 
 .search {
   display: flex;
@@ -381,4 +401,32 @@ template {
   font-size: 14px;
   line-height: 18px;
   color: #333333;
+}
+
+@media (max-width: 1200px) {
+  .container {
+    max-width: 960px;
+  }
+}
+@media (max-width: 960px) {
+  .container {
+    max-width: 700px;
+  }
+  .navbar-top {
+    padding-bottom: 30px;
+    padding-top: 30px;
+  }
+  .navbar__search {
+    margin-left: auto;
+    max-width: 340px;
+  }
+  .navbar-menu__link {
+    font-size: 12px;
+    line-height: 15px;
+  }
+}
+@media (min-width: 768px) {
+  .container {
+    max-width: 700px;
+  }
 }/*# sourceMappingURL=style.css.map */
