--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -9,7 +9,22 @@
   &__search
     margin: auto
     margin-left: 108px
-
+  &-bottom
+    background-color: $dark
+  &-menu
+    margin: 0
+    padding: 31px 0
+    display: flex
+    justify-content: space-between
+    align-items: center
+    color: $light
+    
+    &__link
+      color: inherit
+      text-decoration: none
+      text-transform: uppercase
+.logo
+  width: 177px
 .search
   display: flex
   position: relative
